--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pbr>=0.6,<1.0
-oslosphinx
-sphinx>=1.1.2,<1.2
+openstackdocstheme>=1.11.0
+sphinx!=1.6.6,!=1.6.7,<2.0.0;python_version=='2.7'  # BSD
+sphinx!=1.6.6,!=1.6.7;python_version>='3.4'  # BSD
 testrepository>=0.0.18
 testtools>=0.9.34
 yasfb>=0.5.1
