--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-openstackdocstheme>=1.11.0
-sphinx!=1.6.6,!=1.6.7;python_version>='3.4'  # BSD
+openstackdocstheme>=2.0.0
+sphinx>=2.0.0,!=2.1.0  # BSD
 testrepository>=0.0.18
 testtools>=0.9.34
 yasfb>=0.5.1
